=========
Changelog
=========

Version 4.10.44  (March ??, 2018)

- Removed quest:  Ragefire Chasm: Animal Control (obsolete)

- Added quests:
	- Blackfathom Deeps: The Rise of Aku'mai (thanks Guldukat)
	- Antorus, the Burning Throne: The Death of a Titan
	- Antorus, the Burning Throne: The Unmaker
	- Antorus, the Burning Throne: Moments of Reflection
	- Seat of the Triumvirate: The Crest of Knowledge


Version 4.10.43  (February 19, 2018)

	- German translation updated.
	

	

Version 4.10.42  (February 14, 2018)

	- Bug fix for Return to Karazhan quests.
	
	

Version 4.10.41  (January 28, 2018)

- German translation updated.



Version 4.10.40  (August 31, 2017)

- TOC file updated for Patch 7.3.

- Fixed quests not showing for The Deadmines, Scarlet Halls, Scarlet Monastery, Shadowfang Keep and Scholomance. 

- Blizzard now includes the name of the dungeon or raid with the quests.  This was causing some text alignment issues with so many quests, so I removed the Dungeon names and just kept the quest names for each quest.  Will break the code that detects if you're on a quest until I can re-work it.

- Many profession and Order Hall quests added: 
	- Assault on Violet Hold: The Fel Lexicon
	- Black Rook Hold: Heavy, But Helpful
	- Black Rook Hold: The Raven's Wisdom
	- Black Rook Hold: Lord Ravencrest
	- Black Rook Hold: Into Black Rook Hold
	- Black Rook Hold: An Unclaimed Soul
	- Darkheart Thicket: Through the Fog
	- Darkheart Thicket: Demons Be Different
	- Darkheart Thicket: The Nightmare Lash
	- Darkheart Thicket: Essence of Regrowth
	- Darkheart Thicket: Nightmare Oak
	- Eye of Azshara: Put a Cork in It
	- Eye of Azshara: Scales of the Sea
	- Eye of Azshara: The Scales of Serpentrix
	- Eye of Azshara: The Frozen Soul
	- Eye of Azshara: Essence of Balance
	- Eye of Azshara: A Magical Affliction
	- Eye of Azshara: The Scepter of Storms
	- Halls of Valor: The Prime Ingredient
	- Halls of Valor: Vision of Valor
	- Halls of Valor: Jewel of the Heavens